// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupAction renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexGrow": 1,
      "gap": 4,
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 8,
    }
  }
>
  <test-file-stub
    fill="#FFFCFA"
    style={
      [
        {
          "height": 16,
          "width": 16,
        },
        undefined,
      ]
    }
  />
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        {
          "color": "#2B1911",
        },
        [
          {
            "color": "#FFFCFA",
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 28,
          },
          undefined,
        ],
        false,
      ]
    }
  >
    label
  </Text>
</View>
`;

exports[`PopupAction renders correctly when applying style 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -26,11 +26,11 @@
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
-       "alignItems": "center",
+       "alignItems": "flex-start",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 4,
        "opacity": 1,
        "paddingBottom": 8,"
`;

exports[`PopupAction renders correctly when loading 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  <View
    accessibilityState={
      Object {
        "busy": undefined,
        "checked": undefined,
-       "disabled": undefined,
+       "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
@@ -38,21 +38,13 @@
        "paddingRight": 24,
        "paddingTop": 8,
      }
    }
  >
-   <test-file-stub
-     fill="#FFFCFA"
-     style={
-       Array [
-         Object {
-           "height": 16,
-           "width": 16,
-         },
-         undefined,
-       ]
-     }
+   <ActivityIndicator
+     color="#FFFCFA"
+     size="small"
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
@@ -77,8 +69,8 @@
          ],
          false,
        ]
      }
    >
-     label
+     loading...
    </Text>
  </View>"
`;

exports[`PopupAction renders correctly with reversed order 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -27,11 +27,11 @@
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
    style={
      Object {
        "alignItems": "center",
-       "flexDirection": "row",
+       "flexDirection": "row-reverse",
        "flexGrow": 1,
        "gap": 4,
        "opacity": 1,
        "paddingBottom": 8,
        "paddingLeft": 24,"
`;
